# Spam-Detection

./: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  huggingface_utils.py  model_utils.py  streamlit_app.py  train.py
models/: spam_model.joblib  xgboost_model.joblib
notebook/: spam_detection_process.ipynb  spam_detection_process_executed.ipynb
reports/: metrics.json  random_forest_metrics.json  xgboost_metrics.json
tests/: test_functional.py  test_huggingface_functional.py
