[project]
name = "spam-detection"
version = "0.1.0"
description = "SMS spam detection with local Scikit-learn and Hugging Face inference."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "joblib==1.4.2",
    "streamlit==1.39.0",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "torch==2.5.1+cpu",
    "transformers==4.46.3",
    "pytest==8.3.3",
    "xgboost==2.1.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
]

[tool.uv]
package = false
